--- a/frontend/res/styles/backtest.less
+++ b/frontend/res/styles/backtest.less
@@ -15,6 +15,25 @@
     margin-left: 30px;
   }
 
+  .backtest_result {
+    display: flex;
+    padding: 10px 0;
+
+    >div {
+      flex: 1;
+      text-align: center;
+
+      >:first-child {
+        color: dimgray;
+        font-size: 14px;
+      }
+
+      >:last-child {
+        font-size: 28px;
+      }
+    }
+  }
+
   .table {
     .form-group {
       margin: 0;
