--- a/frontend/res/styles/stock.less
+++ b/frontend/res/styles/stock.less
@@ -46,6 +46,12 @@
     }
   }
 
+  .prediction {
+    font-size: 24px;
+    text-align: center;
+    padding: 10px 0;
+  }
+
   .echarts {
     width: 100%;
   }
