--- a/frontend/res/styles/strategy_market.less
+++ b/frontend/res/styles/strategy_market.less
@@ -1,15 +1,8 @@
 #view_strategy_market {
-  .item {
+  .card {
     display: inline-block;
-    background-color: rgba(255, 242, 181, 1);
     margin: 10px 15px;
-    padding: 10px 20px;
     width: 350px;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, .3);
-
-    .name {
-      font-size: 32px;
-    }
 
     .user, .time {
       font-size: 14px;
@@ -21,7 +14,7 @@
     }
 
     button {
-      margin: 5px 10px;
+      margin-top: 5px;
     }
   }
 }
