--- a/frontend/res/styles/home.css
+++ b/frontend/res/styles/home.css
@@ -21,3 +21,10 @@
   font-size: 20px;
   font-weight: 300;
 }
+footer {
+  margin-top: 50px;
+  background-color: #333333;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+}
