--- a/frontend/res/styles/home.less
+++ b/frontend/res/styles/home.less
@@ -24,3 +24,11 @@
     font-weight: 300;
   }
 }
+
+footer {
+  margin-top: 50px;
+  background-color: #333333;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+}
