--- a/frontend/res/styles/stock.css
+++ b/frontend/res/styles/stock.css
@@ -35,6 +35,11 @@
   flex: 1;
   font-size: 16px;
 }
+#view_stock .prediction {
+  font-size: 24px;
+  text-align: center;
+  padding: 10px 0;
+}
 #view_stock .echarts {
   width: 100%;
 }
