--- a/frontend/res/styles/strategy_market.css
+++ b/frontend/res/styles/strategy_market.css
@@ -1,22 +1,16 @@
-#view_strategy_market .item {
+#view_strategy_market .card {
   display: inline-block;
-  background-color: #fff2b5;
   margin: 10px 15px;
-  padding: 10px 20px;
   width: 350px;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
 }
-#view_strategy_market .item .name {
-  font-size: 32px;
-}
-#view_strategy_market .item .user,
-#view_strategy_market .item .time {
+#view_strategy_market .card .user,
+#view_strategy_market .card .time {
   font-size: 14px;
   color: dimgray;
 }
-#view_strategy_market .item .description {
+#view_strategy_market .card .description {
   font-size: 16px;
 }
-#view_strategy_market .item button {
-  margin: 5px 10px;
+#view_strategy_market .card button {
+  margin-top: 5px;
 }
