--- a/frontend/res/views/strategy.html
+++ b/frontend/res/views/strategy.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="res/styles/strategy.css">
+<script src="res/js/qtsnippets.js"></script>
 <script src="res/js/ace/ace.js"></script>
 <script src="res/js/ace/ext-language_tools.js"></script>
 
@@ -81,9 +82,22 @@
                             <i class="mdi mdi-plus"></i> 添加参数
                         </button>
                     </div>
-                    <div class="card">
+                    <div class="card" style="margin-bottom: 20px;">
                         <div class="title"><i class="mdi mdi-language-python"></i> 策略代码</div>
-                        <div id="code_editor" style="height: 500px;"># Python Code Here</div>
+                        <div style="margin-bottom: 10px;">
+                            <dropdown>
+                                <span slot="button">
+                                    <i class="mdi mdi-pencil"></i> 插入代码片段
+                                </span>
+                                <li v-for="snp in snippets">
+                                    <a href="javascript:" @click="insertCode(snp.code)">{{ snp.name }}</a>
+                                </li>
+                            </dropdown>
+                            <a href="#docs?article=backtest_api" target="_blank">
+                                <i class="mdi mdi-information-outline"></i> 回测 API 文档
+                            </a>
+                        </div>
+                        <div id="code_editor" style="height: 500px;">{{ template }}</div>
                     </div>
                 </div>
             </div>
@@ -105,10 +119,10 @@
 <script type="text/javascript">
     (function () {
         var editor;
-
         Vue.component('bs-input', VueStrap.input);
         Vue.component('radio', VueStrap.radio);
         Vue.component('button-group', VueStrap.buttonGroup);
+        Vue.component('dropdown', VueStrap.dropdown);
         var view_strategy = new Vue({
             el: '#view_strategy',
             data: {
@@ -116,7 +130,9 @@
                 selected: -1,
                 detail: {},
                 int_public: 1,
-                confirmDelete: false
+                confirmDelete: false,
+                template: QuantraTemplate,
+                snippets: QuantraSnippets
             },
             watch: {
                 selected: function () {
@@ -134,7 +150,7 @@
                         view_strategy.detail = {
                             name: '',
                             description: '',
-                            code: '# Python code here',
+                            code: QuantraTemplate,
                             params: [],
                             is_public: false
                         };
@@ -172,7 +188,14 @@
                     this.detail.params.splice(index, 1);
                     this.detail = Object.assign({}, this.detail);
                 },
+                insertCode: function(code) {
+                    editor.insert(code);
+                },
                 saveStrategy: function () {
+                    if (this.detail.name == '') {
+                        app.modals.alert('warning', '提示', '请输入策略名称');
+                        return;
+                    }
                     app.modals.showLoading('正在保存策略');
                     var params = [];
                     for (var key in this.detail.params) {
